--- a/matthew.html
+++ b/matthew.html
@@ -21,14 +21,12 @@
             <h1>Matthew</h1>
             <h2>Scrum Master</h2>
             <h3>The smart one that figured out the navigation</h3>
-            <p>Favorite food:</p>
-            <img src="images/" width="500">
-            <p>Faovrite chef:</p>
-            <img src="images/" width="500">
-            <p>Faovrite brand:</p>
-            <img src="images/" width="500">
-            <p>Faovrite brand:  Kettle</p>
-            <img src="images/images/Kettle.jpg" width="500">
+            <p>Favorite food: Pizza</p>
+            <img src="images/pizza.png" width="500">
+            <p>Faovrite chef: Gordan Ramsay</p>
+            <img src="images/GordanRamsay.jpg" width="500">
+            <p>Faovrite brand: Humpty Dumpty</p>
+            <img src="images/hdchips.jpg" width="500">
         </div>
     </body>
 </html>
