--- a/intro.html
+++ b/intro.html
@@ -29,11 +29,11 @@
         </div>
         <div class="z">
             <p><a style="color:black;" href="landon.html">Landon</a></p>
-            <img src="images/trump.jpg"width="600" height="500">
+            <img src="images/"width="600" height="500">
             <p><a style="color:black;" href="matthew.html">Matthew</a></p>
             <img src="images/hippo2.jpg"width="600" height="400">
             <p><a style="color:black;" href="aundraya.html">Aundraya</a></p>
-            <img src="images/panda.jpg"width="600" height="400">
+            <img src="images/baby.jpg"width="600" height="400">
         </div>
             </body>
             </html>
