--- a/matthew.html
+++ b/matthew.html
@@ -22,7 +22,7 @@
             <h2>Scrum Master</h2>
             <h3>The smart one that figured out the navigation</h3>
             <p>Favorite food: Pizza</p>
-            <img src="images/pizza.png" width="500">
+            <img src="images/steak.jpg" width="300" height="300px">
             <p>Faovrite chef: Gordan Ramsay</p>
             <img src="images/GordanRamsay.jpg" width="500">
             <p>Faovrite brand: Humpty Dumpty</p>
