--- a/matthew.html
+++ b/matthew.html
@@ -24,7 +24,7 @@
             <p>Favorite food: Pizza</p>
             <img src="images/steak.jpg" width="300" height="300px">
             <p>Faovrite chef: Gordan Ramsay</p>
-            <img src="images/GordanRamsay.jpg" width="500">
+            <img src="images/chef3.jpg" width="500">
             <p>Faovrite brand: Humpty Dumpty</p>
             <img src="images/hdchips.jpg" width="500">
         </div>
