--- a/landon.html
+++ b/landon.html
@@ -20,7 +20,7 @@
         <div class="intro">
             <h1>Landon</h1>
             <h2>Product Owner</h2>
-            <h3>Chose the logo based on family group chat</h3>
+            <h3>Carried the team with the hippos logo</h3>
             <p>Favorite food:</p>
             <img src="images/pizza.png" width="500">
             <p>Faovrite chef:</p>
