--- a/intro.html
+++ b/intro.html
@@ -17,6 +17,7 @@
         </style>
     <body>
         <ul class="nav">
+            <li><img src="images/hippo.png" width="200"></li>
             <li><a href="intro.html">Intro</a></li>
             <li><a href="Index.html">About</a></li>
             <li><a href="Food.html">Favorite Food</a></li>
@@ -29,9 +30,9 @@
         </div>
         <div class="z">
             <p><a style="color:black;" href="landon.html">Landon</a></p>
-            <img src="images/goooose.jpg"width="600" height="500">
+            <img src="images/qengland.jpg"width="600" height=400">
             <p><a style="color:black;" href="matthew.html">Matthew</a></p>
-            <img src="images/hippo2.jpg"width="600" height="400">
+            <img src="images/hippomatthew.jpg"width="600" height="400">
             <p><a style="color:black;" href="aundraya.html">Aundraya</a></p>
             <img src="images/baby.jpg"width="600" height="400">
         </div>
