--- a/intro.html
+++ b/intro.html
@@ -17,20 +17,21 @@
         </style>
     <body>
         <ul class="nav">
-            <li><img src="images/hippo.png" width="200"></li>
+            <li><h1>Hippo Food Project</h1></li>
             <li><a href="intro.html">Intro</a></li>
             <li><a href="Index.html">About</a></li>
             <li><a href="Food.html">Favorite Food</a></li>
             <li><a href="brands.html">Brands</a></li>
             <li><a href="recipies.html">Recipies</a></li>
             <li><a href="chefs.html">Chefs</a></li>
+            <li><img src="images/hippo.png" width="100"></li>
             </ul>
         <div class="h">
             <h1>The Hippos Team</h1>
         </div>
         <div class="z">
             <p><a style="color:black;" href="landon.html">Landon</a></p>
-            <img src="images/qengland.jpg"width="600" height=400">
+            <img src="images/"width="600" height=400">
             <p><a style="color:black;" href="matthew.html">Matthew</a></p>
             <img src="images/hippomatthew.jpg"width="600" height="400">
             <p><a style="color:black;" href="aundraya.html">Aundraya</a></p>
