--- a/brands.html
+++ b/brands.html
@@ -4,12 +4,14 @@
     </head>
     <body>
       <ul class="nav">
+        <li><h1>Hippo Food Project</h1></li>
         <li><a href="intro.html">Intro</a></li>
         <li><a href="Index.html">About</a></li>
         <li><a href="Food.html">Favorite Food</a></li>
         <li><a href="brands.html">Brands</a></li>
         <li><a href="recipies.html">Recipies</a></li>
         <li><a href="chefs.html">Chefs</a></li>
+        <li><img src="images/hippo.png" width="100"></li>
         </ul>
         <p class="title">Brands</p>
         <div class="row">
