--- a/recipies.html
+++ b/recipies.html
@@ -4,12 +4,14 @@
     </head>
     <body>
         <ul class="nav">
+            <li><h1>Hippo Food Project</h1></li>
             <li><a href="intro.html">Intro</a></li>
             <li><a href="Index.html">About</a></li>
             <li><a href="Food.html">Favorite Food</a></li>
             <li><a href="brands.html">Brands</a></li>
             <li><a href="recipies.html">Recipies</a></li>
             <li><a href="chefs.html">Chefs</a></li>
+            <li><img src="images/hippo.png" width="100"></li>
             </ul>
         <p class="title">Favorite Recipies Page</p>
         <img src="images/pizza.png" width="400px" height="300px" style="position: absolute; left: 10px">
@@ -47,7 +49,7 @@
             <br>
             1 tsp sugar
             <br>
-            1/4 tsp <span title="Trump Sucks"> salt</span> 
+            1/4 tsp  
             <br>
             1/4 tsp red pepper flakes
             <br>
