--- a/aundraya.html
+++ b/aundraya.html
@@ -20,7 +20,7 @@
         <div class="intro">
             <h1>Aundraya Randolph</h1>
             <h2>Developer</h2>
-            <h3>Wanted to quit</h3>
+            <h3>Wanted to quit/Deleted Landons code so she can redo it</h3>
             <p>Favorite food:</p>
             <img src="images/Tteokbokki-Cheesy-Korean-Rice-Cakes.png" width="500">
             <p>Faovrite chef:</p>
