--- a/intro.html
+++ b/intro.html
@@ -35,7 +35,7 @@
             <p><a style="color:black;" href="matthew.html">Matthew</a></p>
             <img src="images/hippomatthew.jpg"width="600" height="400">
             <p><a style="color:black;" href="aundraya.html">Aundraya</a></p>
-            <img src="images/ap21238786669011-c.jpg"width="600" height="400">
+            <img src="images/baby.jpg"width="600" height="400">
         </div>
             </body>
             </html>
