--- a/matthew.html
+++ b/matthew.html
@@ -22,7 +22,7 @@
         <div class="intro">
             <h1>Matthew</h1>
             <h2>Scrum Master</h2>
-            <h3>The smart one that figured out the navigation</h3>
+            <h3>I worked on the navigation and the chefs page</h3>
             <p>Favorite food: steak</p>
             <img src="images/steak.jpg" width="300" height="300px">
             <p>Faovrite chef: Gordan Ramsay</p>
