--- a/landon.html
+++ b/landon.html
@@ -22,7 +22,7 @@
         <div class="intro">
             <h1>Landon</h1>
             <h2>Product Owner</h2>
-            <h3>Chose the logo based on family group chat and worked on the recipies page</h3>
+            <h3>Chose the logo based on family group chat and worked on the recipies/Favorite food page</h3>
             <p>Favorite food:</p>
             <img src="images/pizza.png" width="500">
             <p>Faovrite chef:</p>
