--- a/aundraya.html
+++ b/aundraya.html
@@ -22,7 +22,7 @@
         <div class="intro">
             <h1>Aundraya Randolph</h1>
             <h2>Developer</h2>
-            <h3>Worked on the explanations after not liking landon code</h3>
+            <h3>Worked on the explanations</h3>
             <p>Favorite food:</p>
             <img src="images/Tteokbokki-Cheesy-Korean-Rice-Cakes.png" width="500">
             <p>Faovrite chef:</p>
